docs/envoy/v1.37.2/_sources/intro/arch_overview/security/external_dep_dataplane_core.rst.txt
External dependencies: ``dataplane_core``
=========================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Abseil <https://abseil.io/>`__, `20250814.1 <https://github.com/abseil/abseil-cpp/releases/tag/20250814.1>`__, 2025-09-22, , `Apache-2.0 <https://github.com/abseil/abseil-cpp/blob/20250814.1/LICENSE>`__
  `AWS libcrypto (AWS-LC) <https://github.com/aws/aws-lc>`__, `1.65.1 <https://github.com/aws/aws-lc/releases/tag/v1.65.1>`__, 2025-12-01, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, 
  `BoringSSL <https://github.com/google/boringssl>`__, `0.20250514.0 <https://github.com/google/boringssl/releases/tag/0.20250514.0>`__, 2025-05-14, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&search_type=all>`__, `Mixed <https://github.com/google/boringssl/blob/0.20250514.0/LICENSE>`__
  `C++ rules for Bazel <https://github.com/bazelbuild/rules_cc>`__, `0.2.16 <https://github.com/bazelbuild/rules_cc/releases/tag/0.2.16>`__, 2025-12-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_cc/blob/0.2.16/LICENSE>`__
  `c-ares <https://c-ares.haxx.se/>`__, `1.34.6 <https://github.com/c-ares/c-ares/releases/tag/v1.34.6>`__, 2025-12-08, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&search_type=all>`__, `c-ares <https://github.com/c-ares/c-ares/blob/cares-1_34_6/LICENSE.md>`__
  `CMake (Linux aarch64) <https://cmake.org/>`__, `4.2.1 <https://github.com/Kitware/CMake/releases/tag/v4.2.1>`__, 2025-12-08, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.2.1/Copyright.txt>`__
  `CMake (Linux x86_64) <https://cmake.org/>`__, `4.2.1 <https://github.com/Kitware/CMake/releases/tag/v4.2.1>`__, 2025-12-08, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.2.1/Copyright.txt>`__
  `envoy_toolshed <https://github.com/envoyproxy/toolshed>`__, `0.3.16 <https://github.com/envoyproxy/toolshed/releases/tag/bazel-v0.3.16>`__, 2026-01-04, , `Apache-2.0 <https://github.com/envoyproxy/toolshed/blob/bazel-v0.3.16/LICENSE>`__
  `fmt <https://fmt.dev>`__, `12.1.0 <https://github.com/fmtlib/fmt/releases/tag/12.1.0>`__, 2025-10-29, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&search_type=all>`__, `fmt <https://github.com/fmtlib/fmt/blob/12.1.0/LICENSE>`__
  `Go (Linux amd64) <https://golang.org/>`__, `1.24.4 <https://dl.google.com/go/go1.24.4.linux-amd64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux arm64) <https://golang.org/>`__, `1.24.4 <https://dl.google.com/go/go1.24.4.linux-arm64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.17.2 <https://github.com/gperftools/gperftools/releases/tag/gperftools-2.17.2>`__, 2025-08-15, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/gperftools/gperftools/blob/gperftools-2.17.2/COPYING>`__
  `gRPC <https://grpc.io>`__, `1.76.0 <https://github.com/grpc/grpc/releases/tag/v1.76.0>`__, 2025-10-20, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/grpc/grpc/blob/v1.76.0/LICENSE>`__
  `libcircllhist <https://github.com/openhistogram/libcircllhist>`__, `39f9db7 <https://github.com/openhistogram/libcircllhist/tree/39f9db724a81ba78f5d037f1cae79c5a07107c8e>`__, 2019-05-21, , `Apache-2.0 <https://github.com/openhistogram/libcircllhist/blob/39f9db724a81ba78f5d037f1cae79c5a07107c8e/LICENSE>`__
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/tree/62c152d9a7cd264b993dad730c4163c6ede2e0a3>`__, 2020-07-28, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/libevent/libevent/blob/62c152d9a7cd264b993dad730c4163c6ede2e0a3/LICENSE>`__
  `liburing <https://github.com/axboe/liburing>`__, `2.12 <https://github.com/axboe/liburing/releases/tag/liburing-2.12>`__, 2025-08-23, , 
  `LLVM toolchain for Bazel <https://github.com/bazel-contrib/toolchains_llvm>`__, `1.6.0 <https://github.com/bazel-contrib/toolchains_llvm/releases/tag/v1.6.0>`__, 2025-12-09, , `Apache-2.0 <https://github.com/bazel-contrib/toolchains_llvm/blob/v1.6.0/LICENSE>`__
  `Nghttp2 <https://nghttp2.org>`__, `1.66.0 <https://github.com/nghttp2/nghttp2/releases/tag/v1.66.0>`__, 2025-06-17, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&search_type=all>`__, `MIT <https://github.com/nghttp2/nghttp2/blob/v1.66.0/LICENSE>`__
  `Ninja <https://ninja-build.org/>`__, `1.13.1 <https://github.com/ninja-build/ninja/releases/tag/v1.13.1>`__, 2025-07-10, `cpe:2.3:a:ninja-build:ninja:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aninja-build%3Aninja%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/ninja-build/ninja/blob/v1.13.1/COPYING>`__
  `nlohmann JSON <https://nlohmann.github.io/json>`__, `3.12.0 <https://github.com/nlohmann/json/releases/tag/v3.12.0>`__, 2025-04-11, `cpe:2.3:a:json-for-modern-cpp_project:json-for-modern-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ajson-for-modern-cpp_project%3Ajson-for-modern-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/nlohmann/json/blob/v3.12.0/LICENSE.MIT>`__
  `Perfetto <https://perfetto.dev/>`__, `53.0 <https://github.com/google/perfetto/releases/tag/v53.0>`__, 2025-11-13, , `Apache-2.0 <https://github.com/google/perfetto/blob/v53.0/LICENSE>`__
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&search_type=all>`__, `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) linux_aarch_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) linux_ppcle_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) linux_x86_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) osx_aarch_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) osx_x86_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Protocol Buffers (protoc) win64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , `Protocol Buffers <https://github.com/protocolbuffers/protobuf/blob/v33.2/LICENSE>`__
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `1.7.0 <https://github.com/bazelbuild/rules_python/releases/tag/1.7.0>`__, 2025-11-14, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/1.7.0/LICENSE>`__
  `QUICHE <https://github.com/google/quiche>`__, `1eb9b26 <https://github.com/google/quiche/tree/1eb9b26af7a84f13ee208803c4704306b2ceec9a>`__, 2026-01-07, , `BSD-3-Clause <https://github.com/google/quiche/blob/1eb9b26af7a84f13ee208803c4704306b2ceec9a/LICENSE>`__
  `RE2 <https://github.com/google/re2>`__, `2023-11-01 <https://github.com/google/re2/releases/tag/2023-11-01>`__, 2023-10-31, , `BSD-3-Clause <https://github.com/google/re2/blob/2023-11-01/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.15.1 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.15.1>`__, 2025-06-24, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.15.1/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `1.0.0 <https://github.com/bazelbuild/rules_license/releases/tag/1.0.0>`__, 2024-09-05, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/1.0.0/LICENSE>`__
  `spdlog <https://github.com/gabime/spdlog>`__, `1.16.0 <https://github.com/gabime/spdlog/releases/tag/v1.16.0>`__, 2025-10-11, , `MIT <https://github.com/gabime/spdlog/blob/v1.16.0/LICENSE>`__
  `tcmalloc <https://github.com/google/tcmalloc>`__, `5da4a88 <https://github.com/google/tcmalloc/tree/5da4a882003102fba0c0c0e8f6372567057332eb>`__, 2024-12-27, , `Apache-2.0 <https://github.com/google/tcmalloc/blob/5da4a882003102fba0c0c0e8f6372567057332eb/LICENSE>`__
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.8.3 <https://github.com/Cyan4973/xxHash/releases/tag/v0.8.3>`__, 2024-12-30, , `BSD-2-Clause <https://github.com/Cyan4973/xxHash/blob/v0.8.3/LICENSE>`__
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `0.8.0 <https://github.com/jbeder/yaml-cpp/releases/tag/0.8.0>`__, 2023-08-10, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&search_type=all>`__, `MIT <https://github.com/jbeder/yaml-cpp/blob/0.8.0/LICENSE>`__
  `zlib <https://zlib.net>`__, `1.3.1 <https://github.com/madler/zlib/releases/tag/v1.3.1>`__, 2024-01-22, `cpe:2.3:a:gnu:zlib:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agnu%3Azlib%3A%2A&search_type=all>`__, `zlib <https://github.com/madler/zlib/blob/v1.3.1/zlib.h>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `2.3.2 <https://github.com/zlib-ng/zlib-ng/releases/tag/2.3.2>`__, 2025-12-02, , `zlib <https://github.com/zlib-ng/zlib-ng/blob/2.3.2/LICENSE.md>`__


envoy.filters.http.grpc_field_extraction
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.grpc_json_reverse_transcoder
-----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.grpc_json_transcoder
---------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.proto_api_scrubber
-------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.filters.http.proto_message_extraction
-------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `proto-converter <https://github.com/grpc-ecosystem/proto-converter>`__, `1db7653 <https://github.com/grpc-ecosystem/proto-converter/tree/1db76535b86b80aa97489a1edcc7009e18b67ab7>`__, 2024-06-25, , `Apache-2.0 <https://github.com/grpc-ecosystem/proto-converter/blob/1db76535b86b80aa97489a1edcc7009e18b67ab7/LICENSE>`__


envoy.wasm.runtime.wasmtime
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.68.1 <https://github.com/bazelbuild/rules_rust/releases/tag/0.68.1>`__, 2025-12-10, , `Apache-2.0 <https://github.com/bazelbuild/rules_rust/blob/0.68.1/LICENSE.txt>`__

